@@ -1,15 +1,11 @@
 package com.dmdirc.ktirc.model
 
+import com.dmdirc.ktirc.util.currentTimeProvider
+import com.dmdirc.ktirc.util.currentTimeZoneProvider
 import java.time.Instant
 import java.time.LocalDateTime
-import java.time.ZoneId
 
 class IrcMessage(val tags: Map<MessageTag, String>, val prefix: ByteArray?, val command: String, val params: List<ByteArray>) {
-
-    companion object {
-        internal var currentTimeZoneProvider = { ZoneId.systemDefault() }
-        internal var currentTimeProvider = { LocalDateTime.now(currentTimeZoneProvider()) }
-    }
 
     val time: LocalDateTime = if (MessageTag.ServerTime in tags) {
         LocalDateTime.ofInstant(Instant.parse(tags[MessageTag.ServerTime]), currentTimeZoneProvider())
